mtp: bump dbus timeout to 60 minutes

to prevent timeouts when listing tens of thousands of files.

BUG: 462059
(cherry picked from commit ec022fb86947765b18cdccaae0853bb1c163d2f5)